# caos_challenges

./: README.md
dice/: Cargo.toml  mk-leaderboard.sh  new-par-string-buf  par-string-buf.rs  par-sum.rs  par.rs  result.csv  result.html  runAll.sh  seq-lock-stdout.rs  seq-reader.rs  seq-string-buf.rs  seq-sum.rs  seq.csv  seq.json  seq.rs
dice/benches/: 19-03-07.html  index.html
dice/src/: main.rs
smooshed_morse/: Cargo.toml  mighty.c  mighty2.c
smooshed_morse/src/: easy.rs  gen.rs
sum3/: 4000  Cargo.toml  make_input.py
sum3/src/: main.rs
